icon and image update

--- a/src/scss/modules/_about_us.scss
+++ b/src/scss/modules/_about_us.scss
@@ -3,11 +3,11 @@
 // ===============================================================
 
 .about-us__heading {
-    background-image: url('../../images/about.jpg');
+    background-image: url('../../images/contact-us.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 0 0;
-    padding: em(110px) 0;
+    background-position: 0 -138px;
+    padding: em(120px) 0;
     position: relative;
 }
 
