--- a/src/scss/utilities/_config.scss
+++ b/src/scss/utilities/_config.scss
@@ -20,6 +20,8 @@ $qpick__succes           : #55efc4;
 $qpick__white            : #fff;
 $qpick__info             : #74b9ff;
 $qpick__grey             : #f3f7f8;
+$black                   : #000000;
+$icon__color             : #f1602e;
 $border                  : lighten($qpick__black, 70%);
 
 // COLOR MAPS
