--- a/src/scss/modules/_login.scss
+++ b/src/scss/modules/_login.scss
@@ -17,7 +17,6 @@
         @include mq('lg') {
             height: 100vh;
         }
-        background-color: $qpick__accent;
 
         &--items {
             position: relative;
@@ -26,6 +25,7 @@
                 transform: translateY(-120px);
               
                 @include mq('lg') {
+                    width: 100%;
                     height: 100vh;
                     object-fit: cover;
                 }
