--- a/src/scss/modules/_quick-links.scss
+++ b/src/scss/modules/_quick-links.scss
@@ -71,10 +71,10 @@
         }
 
         h4 {
-            font-size: em(15px);
-            font-weight: $font-weight--lg;
+            font-size: em(14px);
+            font-weight: $font-weight--sm;
             text-align: center;
-            margin-top: em(15px, 15px);
+            margin-top: em(15px, 14px);
         }
     }
 }
