--- a/src/scss/modules/_index.scss
+++ b/src/scss/modules/_index.scss
@@ -56,10 +56,10 @@
 @import "./banner";
 
 // =======================================================
-//              RECHARGE
+//              SRV SECTION
 // =======================================================
 
-// @import "./recharge-page";
+@import "./srvsection";
 
 // =======================================================
 //              PRODUCT
