--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -28,7 +28,7 @@ h1 {
     font-size: em(32px);
     margin-bottom: em(20px, 32px);
     line-height: em(30px, 32px);
-    font-weight: $font-weight--xxl;
+    font-weight: $font-weight--xl;
 }
 
 h2 {
