--- a/src/scss/utilities/_config.scss
+++ b/src/scss/utilities/_config.scss
@@ -1,7 +1,8 @@
 // GOOGLE FOONTS
-$font-stack--google     : 'https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800';
+$font-stack--google     : 'https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800';
 $font-family--primary   : 'Poppins', sans-serif;
 
+$font-weight--xxs       : 200;
 $font-weight--xs        : 300;
 $font-weight--sm        : 400;
 $font-weight--md        : 500;
